Delete_button_aadd

--- a/contact_list/views/home.ejs
+++ b/contact_list/views/home.ejs
@@ -11,6 +11,7 @@
      
         <%= locals.title%> 
     </title>
+    <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
     <!-- <h1>Rendered from ejs views</h1> -->
@@ -33,5 +34,6 @@
         <input type="number" name="phone" placeholder="Enter Phone" required>
         <button type="submit">Add Contact</button>
     </form>
+    <script type="text/javascript" src="/js/home.js"></script>
 </body>
 </html>
