--- a/contact_list/assets/css/home.css
+++ b/contact_list/assets/css/home.css
@@ -1,3 +1,37 @@
 body{
+    margin: 0;
+    font-family: sans-serif;
+}
+#page-heading{
     text-align: center;
+    margin-top: 25px;
+    color: grey;
+}
+.contact{
+    padding: 3px 10px;
+    border: 1px solid white;
+    background-color: blue;
+    box-shadow: 1px 1px 1px 1px lightgrey;
+    color: white;
+    display: flex;
+}
+.contact .details{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 90%;
+}
+.contact .delete-button{
+    width: 10%;
+    padding: 3px;
+    text-align: center;
+    margin-top: 5px;
+}
+.contact .delete-button a{
+    color: white;
+    background-color: red;
+}
+.contact p{
+    margin: 5px 0;
 }
