--- a/contact_list/views/home.ejs
+++ b/contact_list/views/home.ejs
@@ -1,39 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- add title dynamically -->
-        <!-- <%= title %>  this is add after  in title -->
-        <!-- adding locals key in title from title in practice.ejs then webpage title same -->
+    <!-- add title dynamically -->
+    <!-- <%= title %>  this is add after  in title -->
+    <!-- adding locals key in title from title in practice.ejs then webpage title same -->
     <title>
-     
-        <%= locals.title%> 
+
+        <%= locals.title%>
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- our css should be below all otheer styles so that we can override it -->
     <link rel="stylesheet" href="/css/home.css">
 </head>
+
 <body>
     <!-- <h1>Rendered from ejs views</h1> -->
-    <h1>Contact List</h1>
-    <div>
+    <h1 id="page-heading"> <i class="fas fa-address-book"></i> My Contacts List</h1>
+    <div id="contacts-list-container">
         <ul>
             <% for(let i of contact_list){%>
-                <li>
-                    <p><%= i.name%></p>
-                    <p><%= i.phone%></p>
-                </li>
+                <li class="contact">
+                    <div class="details">
+                        <p>
+                            <%= i.name%>
+                        </p>
+                        <p>
+                            <%= i.phone%>
+                        </p>
+                    </div>
 
-            <%}%>
+                    <div class="delete-button">
+                        <a href="/delete-contact/?phone=<%= i.phone%>"> 
+                            <i class="fas fa-window-close"> </i>
+                        </a>
+
+                    </div>
+                </li>
+                <%}%>
         </ul>
     </div>
+
     <!-- create a form and call in index.js -->
-    <form action="/create-contact" method="POST">  
+    <form id="new-contact-form" action="/create-contact" method="POST">
         <!-- we will use 'required' because user should be sending in blank form  -->
         <input type="text" name="name" placeholder="Enter Name" required>
         <input type="number" name="phone" placeholder="Enter Phone" required>
-        <button type="submit">Add Contact</button>
+        <button type="submit">Add</button>
     </form>
+
     <script type="text/javascript" src="/js/home.js"></script>
 </body>
+
 </html>
