connect_with_DB

--- a/contact_list/views/home.ejs
+++ b/contact_list/views/home.ejs
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="delete-button">
-                        <a href="/delete-contact/?phone=<%= i.phone%>"> 
+                        <a href="/delete-contact/?id=<%= i.id>"> 
                             <i class="fas fa-window-close"> </i>
                         </a>
 
